The font is now locally-sources, like tomatoes

--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -1,3 +1,7 @@
+@font-face {
+  src: {{ url_for('static', filename='sspro-ita.ttf') }};
+}
+
 html {
 	background-color: #22242e;
 	font-family: 'Source Sans Pro';
