--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -2,12 +2,12 @@
 	<head>
 		<link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}" type="text/css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'>
-	<title>squip_notes</title>
+		<!-- <link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'> -->
+	<title>sqnotes</title>
 	</head>
 	<body>
 
-	<h1 class="pagetitle">$ ~/squip_notes</h1>
+	<h1 class="pagetitle">$ ~/sqnotes</h1>
 	<div class="div1">
 		<form action="." method="POST">
 			<textarea type="text" name="title" class="title">{{ ntitle }}</textarea><br>
