--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -11,7 +11,7 @@
 	<div class="div1">
 		<form action="." method="POST">
 			<textarea type="text" name="title" class="title">{{ ntitle }}</textarea><br>
-			<textarea type="text" name="text" rows = "50" cols = "60*" class="text">{{ ntext }}</textarea><br>
+			<textarea type="text" name="text" cols = "60*" class="text">{{ ntext }}</textarea><br>
 			<button type="submit" name="submit">OK</button>
 			<div class="notetime">Note : you can drag the textbox to make it bigger.</div>
 		</form>
