Changed font to noto

--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -1,10 +1,31 @@
 @font-face {
-  src: {{ url_for('static', filename='sspro-ita.ttf') }};
+  font-family: "Noto Sans";
+  src: url(NotoSans-Regular.ttf);
 }
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url(NotoSans-Bold.ttf);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url(NotoSans-Italic.ttf);
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url(NotoSans-BoldItalic.ttf);
+  font-weight: bold;
+  font-style: italic;
+}
+
 
 html {
 	background-color: #22242e;
-	font-family: 'Source Sans Pro';
+	font-family: 'Noto Sans';
 	color: #f8f8f2;
 }
 
@@ -87,6 +108,7 @@ a {
 */
 
 .text {
+	font-family: 'Noto Sans';
 	width: 100%;
 	background: #44475a;
 	color: #f8f8f2;
@@ -100,6 +122,7 @@ a {
 }
 
 .title {
+	font-family: 'Noto Sans';
 	width: 100%;
 	background: #44475a;
 	color: #f8f8f2;
