--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}" type="text/css" />
+		<link rel="stylesheet" href="{{ csslink }}" type="text/css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<!-- <link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'> -->
 	<title>sqnotes</title>
