--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -1,12 +1,12 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}" type="text/css" />
+		<link rel="stylesheet" href="{{ csslink }}" type="text/css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<!--<link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'> -->
 	<title>sqnotes</title>
 	</head>
 	<body>
-
+		<form action="." method="GET"><button type="submit" value="switchpls" name="switchpls" class="themebutton">Change theme</button></form>
 		<h1 class="pagetitle">$ ~/sqnotes</h1><a class="exportlink" href="{{ url_for('rawnotes') }}">Raw notes</a>
 		<form action="." method="POST">
 			<input type="text" name="title" class="title" placeholder="Title"><br>
