--- a/src/templates/export.html
+++ b/src/templates/export.html
@@ -1,6 +1,10 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}" type="text/css" />
+	<style>
+		.rawtext {
+			white-space: pre-wrap;
+		}
+	</style>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<!--<link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'> -->
 	<title>sqnotes</title>
